--- a/python_api/requirements.txt
+++ b/python_api/requirements.txt
@@ -1,17 +1,21 @@
-fastapi==0.108.0
-uvicorn==0.25.0
-sqlalchemy==2.0.25
-pydantic==2.5.3
-pydantic-settings==2.1.0
-email-validator==2.1.0.post1
-python-dotenv==1.0.0
-python-multipart==0.0.6
-passlib==1.7.4
-bcrypt==4.1.2
-pytz==2023.3
-langchain==0.1.1
-langchain-openai==0.0.5
-langchain-community==0.0.13
-openai==1.6.1
-pypdf==3.17.1
-requests==2.31.0
+fastapi>=0.115.11
+uvicorn>=0.34.0
+sqlalchemy>=2.0.39
+pydantic>=2.10.6
+pydantic-settings>=2.8.1
+email-validator>=2.2.0
+python-dotenv>=1.0.1
+python-multipart>=0.0.20
+passlib>=1.7.4
+bcrypt>=4.1.2
+pytz>=2025.1
+langchain>=0.3.20
+langchain-openai>=0.3.8
+langchain-community>=0.3.19
+langchain-core>=0.3.44
+langchain-groq>=0.2.5
+openai>=1.6.1
+pypdf>=5.3.1
+requests>=2.32.3
+numpy>=2.2.3
+pandas>=2.2.3
